# AION-Desktop-Assistant

./: .dockerignore  .editorconfig  .gitignore  AION-AutoInstaller.bat  AIONInstaller.vbs  API-DOCUMENTATION.md  AUDIT-REPORT.md  AionDesktopAssistant.csproj  App.xaml  App.xaml.cs  App_Original.xaml.cs  BIDIRECTIONAL-INTEGRATION.md  COMPLETION-REPORT.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  Dockerfile  ECOSYSTEM-INTEGRATION-ANALYSIS.md  EMOJI_STYLE_GUIDE.md  EXECUTIVE-BRIEFING.md  INSTRUCCIONES-INSTANCIA-PARALELA.md  LICENSE  LICENSE.txt  MainWindow.xaml  MainWindow.xaml.cs  Makefile  README.md  STRATEGIC-TRANSFORMATION-REPORT.md  TEST-SUMMARY.md  TESTING.md  aion-cli.py  aion_simple_server.py  build-release.bat  build.bat  claude-aion-cli.js  create-installers.bat  create-release-package.bat  docker-compose.yml  publish-all-platforms.ps1  release-management.bat  version.json
.github/: COMMIT_CONVENTION.md
AionDesktopAssistant.Tests/: ClaudeIntegrationServiceTests.cs  RemoteControlServiceTests.cs
Services/: AccessibilityService.cs  AccessibilityService_Enhanced.cs  AionRemoteControlService.cs  ClaudeCodeIntegrationService.cs  KeyboardAutomationService.cs  KeyboardAutomationService_Enhanced.cs  MouseAutomationService.cs  OcrService.cs  OcrService.cs.backup  ScreenCaptureService.cs  ScreenCaptureService.cs.backup  VoiceRecognitionService.cs  VoiceSynthesisService.cs  WindowManagementService.cs  WindowManagementService_Enhanced.cs
aion-server-rust/: Cargo.toml  README.md
aion-server-rust/src/: lib.rs  main.rs
aion-server-rust/tests/: integration_test.rs
(+27 files in other folders)
